pijama_driver/tests/type_check/fail/variables/shadowing.pj
x = 5
x = true
x + 1
